--- a/PetRescueApp/Info.plist
+++ b/PetRescueApp/Info.plist
@@ -4,7 +4,9 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Montserrat-Regular</string>
+		<string>Montserrat</string>
+		<string>Montserrat-Regular.ttf</string>
+		<string>Montserrat-ExtraLight.ttf</string>
 	</array>
 </dict>
 </plist>
